--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
 
 /*-------HEADER--------------*/
 .logo{
+    font-family: 'Raleway';
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.3;
     list-style: none;
     text-decoration: none;
     color:var(--focused-link)
@@ -34,17 +38,21 @@ body {
     text-decoration: none;
 }
 
+.main-nav-site{
+    font-weight: 500;
+    line-height: 1.5;
+    color:var(--overlay-cl)
+}
 .main-nav-site:hover, .main-nave-site:focus{
     color:var(--focused-link);
     cursor: pointer;
 }
 
 .main-nav-cnt{
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 0.66;
+    font-style: normal;
+    line-height: 1.5;
     letter-spacing: 0.02em;
+    color: var(--body-txt)
 }
 
 .main-nav-cnt:hover, .main-nav-nt:focus{
@@ -64,10 +72,7 @@ body {
 }
 
 .text{
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 0.66;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--accent-cl);
 }
@@ -79,6 +84,9 @@ body {
 }
 /*------------FILTER-------------*/
 .btn-filter{
+    font-family: 'Roboto';
+    font-weight: 500;
+    line-height: 1.5;
     background-color: var(--accent-cl);
     color: var(--focused-link);
 }
@@ -96,21 +104,17 @@ body {
 }
 
 .name{
-font-family: 'Roboto';
-font-weight: 500;
-font-size: 20px;
-line-height: 0.83;
-letter-spacing: 0.02em;
-color: var(--overlay-cl);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--overlay-cl);
 }
 
 .name-filter{
-font-family: 'Roboto';
-font-weight: 400;
-font-size: 16px;
-line-height: 0.66;
-letter-spacing: 0.02em;
-color: var(--body-txt);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--body-txt);
 }
 /*------------/PORTFOLIO----------*/
 
@@ -125,16 +129,18 @@ color: var(--body-txt);
 }
 
 .header1{
-font-family: 'Roboto';
-font-weight: 700;
-font-size: 56px;
-line-height: 0.93;
-text-align: center;
-letter-spacing: 0.02em;
-color:var(--bgr-cl);
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color:var(--bgr-cl);
 }
 
 .hero-btn{
+    font-family: 'Roboto';
+    font-weight: 500;
+    line-height: 1.5;
     color:var(--bgr-cl);
     background-color:var(--focused-link);
 }
@@ -147,19 +153,15 @@ color:var(--bgr-cl);
 
 /*-------------SECTION 1-----------*/
 .header-advantage{
-    font-family: 'Roboto';
     font-weight: 500;
     font-size: 20px;
-    line-height: 0.83;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--overlay-cl);
 }
 
 .desc-advantage{
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 0.66;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-txt);
 }
@@ -167,10 +169,9 @@ color:var(--bgr-cl);
 
 /*-------------SECTION 2-----------*/
 .header2{
-    font-family: 'Roboto';
     font-weight: 700;
     font-size: 36px;
-    line-height: 0.9;
+    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
@@ -188,20 +189,16 @@ color:var(--bgr-cl);
 }
 
 .name-team{
-    font-family: 'Roboto';
     font-weight: 500;
     font-size: 20px;
-    line-height: 0.83;
+    line-height: 1.2;
     text-align: center;
     letter-spacing: 0.02em;
     color:var(--overlay-cl); 
 }
 
 .position{
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 0.66;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.02em;
     color:var(--body-txt);
