--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@ body {
 }
 
 /*-------HEADER--------------*/
+.site-nav{
+    display:flex;
+    align-items: center;
+}
+.header{
+    display: flex;
+    align-items: center;
+}
+
 .logo{
     font-family: 'Raleway';
     font-weight: 800;
@@ -23,7 +32,9 @@ body {
     line-height: 1.3;
     list-style: none;
     text-decoration: none;
-    color:var(--focused-link)
+    color:var(--focused-link);
+    margin-right: 76px;
+    margin-left: 156px;
 }
 
 .logo-part{
@@ -32,27 +43,42 @@ body {
 
 .main-nav{
     list-style: none;
+    display: flex;
 }
 
 .link{
     text-decoration: none;
 }
 
-.main-nav-site{
+.main-nav-site {
+    display: block;
     font-weight: 500;
     line-height: 1.5;
-    color:var(--overlay-cl)
+    color:var(--overlay-cl);
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
-.main-nav-site:hover, .main-nave-site:focus{
+
+.main-nav .item + .item{
+    margin-left: 40px;
+}
+
+.main-nav-site:hover, .main-nav-site:focus{
     color:var(--focused-link);
     cursor: pointer;
+}
+
+.contact{
+ margin-left: auto;
 }
 
 .main-nav-cnt{
     font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--body-txt)
+    color: var(--body-txt);
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .main-nav-cnt:hover, .main-nav-nt:focus{
